# claude-puhfph-chat-bot

./: .gitignore  LICENSE  README.md  SETUP.md  applescript_helpers.py  aviation_weather.py  com.claudepuhfph.chatbot.plist  com.claudepuhfph.chatbot.web.plist  config.py  conversation.py  database.py  geocode.py  geocode_utils.py  imessage-listener.py  install_launchctl.sh  install_web_launchctl.sh  intent.py  message_polling.py  movies.py  pyproject.toml  requirements.txt  scheduler.py  set_web_auth.sh  setup.sh  start_bot.sh  start_web_troubleshooting.sh  uninstall_launchctl.sh  uninstall_web_launchctl.sh  weather.py  web_troubleshooting.py  zipcode.py
launchd/: com.claudepuhfph.chatbot.plist  com.claudepuhfph.chatbot.web.plist
old_scripts/: imessage_agent.applescript  imessage_agent.applescript.bak  imessage_agent.applescript.compiles  imessage_agent.applescript.script_editor  imessage_autoreply.py  imessage_autoreply_db.py  imessage_davis_bot.py
scripts/: install_launchctl.sh  install_web_launchctl.sh  setup.sh  start_app_status.sh  start_bot.sh  start_web_troubleshooting.sh
